# get-my-id-bot

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  env.example  pyproject.toml
src/: main.py
src/bot/: __init__.py
tests/: test_bot.py
